# tg-static-server

./: .dockerignore  Makefile  README.md  bot.Dockerfile  entrypoint.sh  flake.nix  pyproject.toml  requirements.txt
bot/: callback.py  dispatcher.py  hash_functions.py  main.py  markup.py
