[tool.poetry]
package-mode = false
name = "tg-static-server"
version = "0.1.0"
description = ""
authors = ["YawKar <yawkarpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
typer = "^0.12.3"
humanize = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
typeCheckingMode = "strict"
verboseOutput = true
